# deploykit

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml
src/deploykit_client/: __init__.py  config.py  display.py  handler_commit.py  handler_deploy.py  handler_s3.py  main.py  session.py
src/deploykit_server/: app.py  archive.py  config.py  schema.py
